option('ebug', type: 'integer', value: '4', description: 'set debug level, 0 disable 4 full')
option('olor', type: 'integer', value: '1', description: 'color debug, 0 disable 1 active')
option('assert', type: 'integer', value: '1', description: 'enable assertion')
option('optimize', type: 'integer', value: '2', description: 'enable optimization')
option('openmp', type: 'integer', value: '0', description: 'enable openmp')
option('gprof', type: 'integer', value: '0', description: 'enable gprof')
option('autovectorization', type: 'integer', value: '1', description: 'enable vectorization')
option('efdbg', type: 'integer', value: '0', description: 'enable efdbg')


